# practical1

./: .gitignore  Cargo.toml  README.md  package.json
src/: account.rs  block.rs  blockchain.rs  hash.rs  keypair.rs  main.rs  operation.rs  signature.rs  tx.rs
