[package]
name = "practical1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
base64ct = { version = "1.5.2", features = ["alloc"] }
secp256k1 = { version = "0.24.0", features = ["rand-std", "bitcoin_hashes"] }
sha2 = "0.10.3"
thiserror = "1.0.34"
